feat(api-key): refactor change JWT to API Key and change tests
